# OSiSP_part2

./: .gitignore  README.md
Laba_1/: CMakeLists.txt  main.cpp
Laba_2/: example.cpp  scr_for_run.sh
Laba_3/: CMakeLists.txt  main.cpp  run_code_cmake.sh  scr_for_run.sh
Laba_3/DynamicImport/: main.cpp  scr_for_run.sh
Laba_3/ForInjecting/: CMakeLists.txt  main.cpp  scr_for_build.sh  scr_for_run.sh
Laba_3/Injection/: CMakeLists.txt  main.cpp  scr_for_build.sh  scr_for_run.sh
Laba_3/Shared_version_of_library/: CMakeLists.txt
Laba_3/StaticImport/: CMakeLists.txt  main.cpp  scr_for_run.sh
Laba_3/Static_version_of_library/: CMakeLists.txt  library.cpp  library.hpp
Laba_3/lesson_3/shared_lib/: CMakeLists.txt
Laba_3/lesson_3/shared_lib/lib_src/: sLibrary.cpp  sLibrary.hpp
Laba_3/lesson_3/shared_lib/src/: main.cpp
ThirdDriver/: ThirdDriver.sln
ThirdDriver/ThirdDriver/: ThirdDriver.inf  ThirdDriver.vcxproj  ThirdDriver.vcxproj.filters  logger.h  second_task.c  second_task.h
ThirdDriver/ThirdDriver/x64/Debug/: ThirdDriver.sys.recipe
ThirdDriver/ThirdDriver/x64/Debug/ThirdDriver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ThirdDriver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  signtool.timestamp.1.tlog  signtool.write.1.tlog
ThirdDriver/x64/Debug/: ThirdDriver.cer
ThirdDriver/x64/Debug/ThirdDriver/: ThirdDriver.sys
